--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       class="bg-white/80 backdrop-blur-md sticky top-0 z-50 border-b border-slate-200"
     >
       <div
-        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
+        class="max-w-7xl mx-auto px-4 py-2 flex justify-between items-center"
       >
         <div class="flex items-center gap-2">
           <div
@@ -155,90 +155,57 @@
     <!-- Navbar Section Ends Here -->
 
     <!-- Banner Section Starts Here -->
-    <header
-      class="relative min-h-[90vh] lg:min-h-screen flex items-center justify-center bg-[#05070a] text-white pt-5 pb-20 md:pb-32 px-4 overflow-hidden font-['Plus_Jakarta_Sans',sans-serif]"
-    >
-      <div
-        class="absolute top-0 left-0 w-[300px] md:w-[500px] h-[300px] md:h-[500px] bg-indigo-600/15 rounded-full -translate-x-1/2 -translate-y-1/2 blur-[100px] md:blur-[140px]"
-      ></div>
-      <div
-        class="absolute bottom-0 right-0 w-[400px] md:w-[600px] h-[400px] md:h-[600px] bg-blue-500/10 rounded-full translate-x-1/3 translate-y-1/3 blur-[100px] md:blur-[140px]"
-      ></div>
+   <meta name="google" content="notranslate" />
 
-      <div class="w-full max-w-7xl mx-auto text-center relative z-10">
-        <h1 class="font-black tracking-tight flex flex-col gap-2 md:gap-4">
-          <span
-            class="text-3xl sm:text-4xl md:text-6xl lg:text-7xl text-slate-300"
-          >
-            শূন্য থেকে শুরু করে
-          </span>
+<header class="relative min-h-fit lg:min-h-[75vh] flex flex-col items-center justify-start bg-[#05070a] text-white pt-6 md:pt-10 pb-16 px-4 overflow-hidden font-['Plus_Jakarta_Sans',sans-serif]">
+  
+  <div class="absolute top-0 left-0 w-[300px] md:w-[500px] h-[300px] md:h-[500px] bg-indigo-600/15 rounded-full -translate-x-1/2 -translate-y-1/2 blur-[100px] md:blur-[140px]"></div>
+  <div class="absolute bottom-0 right-0 w-[400px] md:w-[600px] h-[400px] md:h-[600px] bg-blue-500/10 rounded-full translate-x-1/3 translate-y-1/3 blur-[100px] md:blur-[140px]"></div>
 
-          <span
-            class="text-4xl sm:text-5xl md:text-7xl lg:text-8xl text-transparent bg-clip-text bg-gradient-to-b from-white to-slate-500"
-          >
-            হয়ে ওঠো
-          </span>
+  <div class="w-full max-w-7xl mx-auto text-center relative z-10 px-2">
+    
+    <h1 class="font-black tracking-tight flex flex-col items-center mt-2 md:mt-4">
+      <span class="text-2xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl text-slate-300 leading-tight mb-1">
+        শূণ্য থেকে শুরু করে হয়ে ওঠো
+      </span>
 
-          <span
-            class="text-[9vw] sm:text-5xl md:text-7xl lg:text-8xl text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-400 to-orange-500 drop-shadow-[0_10px_20px_rgba(234,179,8,0.2)]"
-          >
-            Confident Speaker
-          </span>
-        </h1>
+      <span class="text-4xl sm:text-6xl md:text-7xl lg:text-8xl xl:text-9xl text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-400 to-orange-500 drop-shadow-[0_10px_20px_rgba(234,179,8,0.2)] leading-tight py-1">
+        Confident Speaker
+      </span>
+    </h1>
 
-        <div class="mt-6 md:mt-6 mb-6 md:mb-10 max-w-4xl mx-auto">
-          <p
-            class="text-base sm:text-lg md:text-2xl text-slate-400 leading-relaxed font-medium px-2"
-          >
-            ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়?
-            <span
-              class="text-indigo-400 font-bold uppercase tracking-[0.15em] text-base md:text-2xl"
-              >১৫ দিনের</span
-            >
-            এই ইনটেনসিভ বুটক্যাম্পে
-            <span class="text-white border-b border-indigo-500/50"
-              >আমরা ব্যাকরণ মুখস্থ করব না</span
-            >, কিন্তু
-            <span class="text-white border-b border-indigo-500/50"
-              >ABCD থেকে শুরু করে Auxiliary Verb, Tense, Preposition,</span
-            >
+    <div class="mt-4 md:mt-6 mb-6 md:mb-8 max-w-5xl mx-auto">
+      <p class="text-base sm:text-lg md:text-xl lg:text-2xl text-slate-400 leading-relaxed font-medium px-2">
+        ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়? 
+        <span class="text-indigo-400 font-bold uppercase tracking-wider text-lg md:text-2xl">১৫ দিনের</span> 
+        এই ইনটেনসিভ বুটক্যাম্পে 
+        <span class="text-white border-b border-indigo-500/30">আমরা ব্যাকরণ মুখস্থ করব না</span>, কিন্তু 
+        <span class="text-white border-b border-indigo-500/30">ABCD থেকে শুরু করে Auxiliary Verb, Tense, Preposition, Sentence Making Structure</span> 
+        এবং 
+        <span class="text-white border-b border-indigo-500/30">Oxford 3000 Vocabulary</span> 
+        সবই শিখব।
+      </p>
 
-            <span class="text-white border-b border-indigo-500/50"
-              >Sentence Making Structure</span
-            >
-            এবং
-            <span class="text-white border-b border-indigo-500/50"
-              >Oxford 3000 Vocabulary</span
-            >
-            সবই শিখব, যেভাবে শিখলে Fluently ইংলিশে কথা বলা যায়।
-          </p>
-
-          <div class="mt-4 md:mt-6">
-            <span
-              class="inline-block text-indigo-400 font-bold uppercase tracking-[0.15em] text-xs md:text-base bg-indigo-500/5 px-4 py-2 rounded-lg border border-indigo-500/10"
-            >
-              🚀 আপনার ফ্লুয়েন্সি মাত্র ১৫ দিনের দূরত্বে!
-            </span>
-          </div>
-        </div>
-
-        <div
-          class="flex flex-col sm:flex-row justify-center items-center gap-4"
-        >
-          <a
-            onclick="openModal()"
-            class="w-full sm:w-auto group relative cursor-pointer overflow-hidden bg-white text-blue-950 px-8 md:px-12 py-4 md:py-6 rounded-2xl text-lg md:text-2xl font-black transition-all hover:scale-105 active:scale-95 shadow-2xl"
-          >
-            <span class="relative z-10 flex items-center justify-center gap-2">
-              বুটক্যাম্পে যুক্ত হোন 🚀
-            </span>
-            <div
-              class="absolute inset-0 bg-gradient-to-r from-yellow-400 to-orange-400 opacity-0 group-hover:opacity-100 transition-opacity"
-            ></div>
-          </a>
-        </div>
+      <div class="mt-4 md:mt-6">
+        <span class="inline-block text-indigo-400 font-bold uppercase tracking-[0.15em] text-[10px] md:text-sm bg-indigo-500/5 px-4 py-2 rounded-full border border-indigo-500/10">
+          🚀 আপনার ফ্লুয়েন্সি মাত্র ১৫ দিনের দূরত্বে!
+        </span>
       </div>
-    </header>
+    </div>
+
+    <div class="flex flex-col sm:flex-row justify-center items-center gap-6">
+      <a
+        onclick="openModal()"
+        class="w-full sm:w-auto group relative cursor-pointer overflow-hidden bg-white text-blue-950 px-10 md:px-14 py-4 md:py-5 rounded-2xl text-lg md:text-2xl font-black transition-all hover:scale-105 active:scale-95 shadow-2xl"
+      >
+        <span class="relative z-10 flex items-center justify-center gap-2">
+          বুটক্যাম্পে যুক্ত হোন 🚀
+        </span>
+        <div class="absolute inset-0 bg-gradient-to-r from-yellow-400 to-orange-400 opacity-0 group-hover:opacity-100 transition-opacity"></div>
+      </a>
+    </div>
+  </div>
+</header>
     <!-- Banner Section Ends Here -->
 
     <!-- Your Pera Our Solution Section Starts Here -->
