--- a/Vocabulary_course/vocabulary.html
+++ b/Vocabulary_course/vocabulary.html
@@ -16,6 +16,8 @@
     </style>
 </head>
 <body class="text-slate-300 antialiased">
+
+    <!-- navbar start here -->
     <nav class="sticky top-0 z-50 bg-[#05070a]/95 backdrop-blur-md border-b border-slate-800/60 p-3">
         <div class="max-w-7xl mx-auto flex flex-col gap-3">
             <div class="flex items-center justify-between gap-2">
@@ -70,6 +72,8 @@
             </div>
         </div>
     </nav>
+    <!-- navbar ENDS here -->
+
 
     <main class="max-w-7xl mx-auto p-4">
         <div id="vocab-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
