--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়?
             <span
               class="text-indigo-400 font-bold uppercase tracking-wider text-lg md:text-2xl"
-              >১৫ দিনের</span
+              >৩০ দিনের</span
             >
             এই ইনটেনসিভ বুটক্যাম্পে
             <span class="text-white border-b border-indigo-500/30"
@@ -396,7 +396,7 @@
             <span
               class="inline-block text-indigo-400 font-bold uppercase tracking-[0.15em] text-[10px] md:text-sm bg-indigo-500/5 px-4 py-2 rounded-full border border-indigo-500/10 animate-bounce"
             >
-              🚀 আপনার ফ্লুয়েন্সি মাত্র ১৫ দিনের দূরত্বে!
+              🚀 আপনার ফ্লুয়েন্সি মাত্র ৩০ দিনের দূরত্বে!
             </span>
           </div>
         </div>
@@ -513,7 +513,7 @@
             >
           </h3>
           <p class="text-slate-500 mt-4 text-sm md:text-lg">
-            ১৫ দিনের এই যাত্রায় আপনার ইংরেজি ভীতি হবে দূর
+            ৩০ দিনের এই যাত্রায় আপনার ইংরেজি ভীতি হবে দূর
           </p>
         </div>
 
@@ -538,7 +538,7 @@
             >
               <span class="text-3xl mb-3">😀</span>
               <p class="text-emerald-100 text-sm leading-relaxed font-medium">
-                ১৫ দিনে টেন্সের প্র্যাকটিক্যাল প্রয়োগ শিখবেন, যা সারাজীবন মনে
+                ৩০ দিনে টেন্সের প্র্যাকটিক্যাল প্রয়োগ শিখবেন, যা সারাজীবন মনে
                 থাকবে।
               </p>
             </div>
@@ -705,7 +705,7 @@
             </span>
           </h2>
           <p class="text-slate-500 mt-6 text-lg max-w-2xl mx-auto">
-            কেন এই ১৫ দিনের যাত্রা আপনার জীবনের সেরা লার্নিং এক্সপেরিয়েন্স হতে
+            কেন এই ৩০ দিনের যাত্রা আপনার জীবনের সেরা লার্নিং এক্সপেরিয়েন্স হতে
             যাচ্ছে?
           </p>
         </div>
@@ -856,7 +856,7 @@
                 গাইডেড জার্নি
               </h3>
               <p class="text-slate-400 text-sm leading-relaxed mb-6">
-                Tense এবং Sentence Structure—সবকিছু একটি নির্দিষ্ট ১৫ দিনের
+                Tense এবং Sentence Structure—সবকিছু একটি নির্দিষ্ট ৩০ দিনের
                 রোডম্যাপ অনুযায়ী শিখুন।
               </p>
               <div
@@ -888,7 +888,7 @@
                 কনফিডেন্স গ্যারান্টি
               </h3>
               <p class="text-slate-400 text-sm leading-relaxed mb-6">
-                ১৫ দিন শেষে আপনি নিজেই পার্থক্য বুঝবেন। ইংরেজি ভীতি কাটিয়ে হয়ে
+                ৩০ দিন শেষে আপনি নিজেই পার্থক্য বুঝবেন। ইংরেজি ভীতি কাটিয়ে হয়ে
                 উঠবেন ফ্লুয়েন্ট স্পিকার।
               </p>
               <div
@@ -1020,7 +1020,7 @@
               <p
                 class="text-slate-400 text-sm leading-relaxed transition-colors duration-500 step-text"
               >
-                দ্রুত জয়েন করে নাও আমাদের ১৫ দিনের স্পেশাল বুটক্যাম্পে। আজই
+                দ্রুত জয়েন করে নাও আমাদের ৩০ দিনের স্পেশাল বুটক্যাম্পে। আজই
                 তোমার ফ্লুয়েন্সির যাত্রা শুরু করো।
               </p>
             </div>
@@ -1057,7 +1057,7 @@
               <p
                 class="text-slate-400 text-sm leading-relaxed transition-colors duration-500 step-text"
               >
-                আমাদের এক্সপার্ট সাপোর্ট ও গাইডেন্স নিয়ে ১৫ দিনের রোডম্যাপটি
+                আমাদের এক্সপার্ট সাপোর্ট ও গাইডেন্স নিয়ে ৩০ দিনের রোডম্যাপটি
                 মনোযোগ দিয়ে অনুসরণ করো।
               </p>
             </div>
@@ -1254,7 +1254,7 @@
             >
           </h2>
           <p class="text-slate-500 mt-4 text-lg">
-            বেসিক থেকে অ্যাডভান্সড—সবই থাকবে এই ১৫ দিনের মাস্টারপ্যানে
+            বেসিক থেকে অ্যাডভান্সড—সবই থাকবে এই ৩০ দিনের মাস্টারপ্যানে
           </p>
         </div>
 
@@ -1438,7 +1438,7 @@
             <p
               class="text-slate-400 text-sm leading-relaxed transition-colors duration-500 card-text"
             >
-              ১৫ দিন শেষে লাইভ প্রেজেন্টেশনের মাধ্যমে নিজের আত্মবিশ্বাস সবার
+              ৩০ দিন শেষে লাইভ প্রেজেন্টেশনের মাধ্যমে নিজের আত্মবিশ্বাস সবার
               সামনে প্রমাণের সুযোগ।
             </p>
           </div>
@@ -1607,7 +1607,7 @@
               >
                 যারা একদম শূন্য থেকে শুরু করতে চায় এবং স্পোকেন ইংলিশের বেসিক
                 (Be-Verb, Tense, Sentence Structure) শক্ত করে কথা বলা শুরু করতে
-                চায়, তাদের জন্যই এই ১৫ দিনের স্পেশাল বুটক্যাম্প। তুমি স্টুডেন্ট
+                চায়, তাদের জন্যই এই ৩০ দিনের স্পেশাল বুটক্যাম্প। তুমি স্টুডেন্ট
                 হও বা প্রফেশনাল, সবার জন্যই এটি সমান কার্যকর।
               </div>
             </div>
@@ -1626,7 +1626,7 @@
                 >
                 <span
                   class="text-lg md:text-xl font-bold text-slate-200 group-hover:text-white transition-colors"
-                  >১৫ দিনে কি সত্যিই ইংরেজি শেখা সম্ভব?</span
+                  >৩০ দিনে কি সত্যিই ইংরেজি শেখা সম্ভব?</span
                 >
               </div>
               <div
@@ -1644,9 +1644,9 @@
               <div
                 class="px-8 md:px-20 pb-8 text-slate-400 leading-relaxed text-base"
               >
-                ১৫ দিনে আমরা আপনাকে সম্পূর্ণ ইংরেজি শিখিয়ে দেব না, তবে আমরা
+                ৩০ দিনে আমরা আপনাকে সম্পূর্ণ ইংরেজি শিখিয়ে দেব না, তবে আমরা
                 আপনার ইংরেজি বলার 'জড়তা' এবং 'ভয়' দূর করব। আমাদের বিশেষ 'ওরাল
-                ড্রিল' মেথড ফলো করলে ১৫ দিন শেষে আপনি নিজে নিজেই শত শত বাক্য
+                ড্রিল' মেথড ফলো করলে ৩০ দিন শেষে আপনি নিজে নিজেই শত শত বাক্য
                 তৈরি করে অনর্গল বলতে পারবেন।
               </div>
             </div>
@@ -1722,7 +1722,7 @@
               <div
                 class="px-8 md:px-20 pb-8 text-slate-400 leading-relaxed text-base"
               >
-                অবশ্যই! সফলভাবে ১৫ দিনের ড্রিলস এবং ফাইনাল প্রেজেন্টেশন শেষ করার
+                অবশ্যই! সফলভাবে ৩০ দিনের ড্রিলস এবং ফাইনাল প্রেজেন্টেশন শেষ করার
                 পর আপনি একটি ভেরিফাইড ডিজিটাল পার্টিসিপেশন সার্টিফিকেট পাবেন।
               </div>
             </div>
@@ -1832,7 +1832,7 @@
             <h3
               class="text-xl md:text-5xl font-extrabold mb-8 md:mb-10 leading-tight"
             >
-              <span class="text-white">১৫ দিনে শেখো</span>
+              <span class="text-white">৩০ দিনে শেখো</span>
               <span
                 class="bg-gradient-to-r from-indigo-400 via-purple-500 to-rose-500 text-transparent bg-clip-text"
                 >স্পোকেন ইংলিশ,</span
@@ -1979,7 +1979,7 @@
                 </span>
                 এনরোলমেন্ট শুরু:
               </span>
-              <span class="text-emerald-400 font-black">10th Jun, 2026</span>
+              <span class="text-emerald-400 font-black">Dateth Month, 2026</span>
             </p>
 
             <div class="h-[1px] w-full bg-white/10"></div>
@@ -1991,7 +1991,7 @@
                 <span class="w-1.5 h-1.5 rounded-full bg-rose-500"></span>
                 এনরোলমেন্ট শেষ:
               </span>
-              <span class="text-rose-400 font-black">24th Jun, 2026</span>
+              <span class="text-rose-400 font-black">Dateth Month, 2026</span>
             </p>
           </div>
         </div>
@@ -2032,7 +2032,7 @@
                   >📍</span
                 >
                 <p class="text-sm leading-relaxed">
-                  Level-4, 34, Awal Centre,<br />Banani, Dhaka
+                  Narsingdi<br />Dhaka, Bangladesh
                 </p>
               </div>
               <div
